--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,9 @@ packages = [{include = "src"}]
 [tool.poetry.dependencies]
 python = "^3.12"
 transformers = "^4.40.0"
-torch = "^2.5.0"
-torchvision = "^0.20.0"
-torchaudio = "^2.5.0"
+torch = ">=2.6.0"
+torchvision = ">=0.21.0"
+torchaudio = ">=2.6.0"
 diffusers = "^0.30.0"
 accelerate = "^0.25.0"
 pillow = "^10.2.0"
